# patra

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  display.rs  logger.rs  main.rs  old-main.rs  patra.rs  render.rs  screen.rs  terminal.rs  ui.rs
src/patra/: app.rs  display.rs  logger.rs
