[package]
name = "patra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
colors-transform = "0.2.11"
serde = { version = "1.0.160", features = ["derive"] }
termion = "2.0.1"
toml = "0.7.3"
